--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.telegram</groupId>
     <artifactId>botapi</artifactId>
     <version>2.1</version>
+    <packaging>war</packaging>
+    <name>Documented Project</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
